Added some first basic message I/O functionality

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,6 +1,19 @@
 include(CheckIncludeFiles)
 include(CheckSymbolExists)
 
+check_include_files(syslog.h HAVE_SYSLOG_H)
+check_include_files(openssl/ssl.h HAVE_OPENSSL_H)
+check_include_files(pthread.h HAVE_PTHREAD_H)
+
+check_symbol_exists(LOG_EMERG   "syslog.h" HAVE_LOG_EMERG_S)
+check_symbol_exists(LOG_ALERT   "syslog.h" HAVE_LOG_ALERT_S)
+check_symbol_exists(LOG_CRIT    "syslog.h" HAVE_LOG_CRIT_S)
+check_symbol_exists(LOG_ERR     "syslog.h" HAVE_LOG_ERR_S)
+check_symbol_exists(LOG_WARNING "syslog.h" HAVE_LOG_WARNING_S)
+check_symbol_exists(LOG_NOTICE  "syslog.h" HAVE_LOG_NOTICE_S)
+check_symbol_exists(LOG_INFO    "syslog.h" HAVE_LOG_INFO_S)
+check_symbol_exists(LOG_DEBUG   "syslog.h" HAVE_LOG_DEBUG_S)
+
 # Test Macro
 # 
 # This macro compiles CMake/tests.c with the appropriate
@@ -57,7 +70,7 @@ foreach(LF_TEST
 	HAVE_GLIBC_STRERROR_R
 	HAVE_POSIX_STRERROR_R
 	)
-	by_internal_test_run(${LF_TEST})
+	lf_internal_test_run(${LF_TEST})
 endforeach(LF_TEST)
 
 # Write result of tests into config.h
